# investrawberry

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  backend.dockerfile  celery.dockerfile
backend/app/: .gitignore  dummy.sql  initial_script.sh  pyproject.toml  requirements.txt  setup.py  worker-start.sh
backend/app/alembic/: env.py
backend/app/alembic/versions/: 011ed664a3c4_.py  0242b65484e0_.py  02e48b9eef78_.py  0cf800006d86_.py  141dda0bbc2c_.py  26304747a3e5_.py  264da1fec4ed_.py  26e90966f153_.py  38071276ac2f_.py  3a9895d5384e_.py  4b778bb52743_.py  537ae9985509_.py  55a3f107b874_.py  5e511bee92e3_.py  64ceb22eb435_.py  65a8684cf235_.py  8613b4042fff_.py  a218a1d4a8d1_.py  b6e008bdfd39_.py  back.py  dba38207abb4_.py  fe0ed9874502_.py
backend/app/app/: __init__.py  main.py  requirements.txt  worker.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: balance.py  exchangekeys.py  exchanges.py  login.py  order.py  portfolio.py  ticker.py  users.py
backend/app/app/core/: celery_app.py  config.py  security.py
backend/app/app/crud/: __init__.py  asset_type.py  base.py  exchange.py  exchange_key.py  order_type.py  portfolio.py  simple_transaction.py  ticker.py  transaction.py  user.py
backend/app/app/db/: base.py  base_class.py  init_db.py  session.py
backend/app/app/models/: __init__.py  asset_type.py  exchange.py  exchange_key.py  order_type.py  portfolio.py  simple_order.py  simple_transaction.py  strategy.py  ticker.py  transaction.py  user.py
backend/app/app/schemas/: __init__.py  asset_type.py  exchange.py  exchange_key.py  order_type.py  portfolio.py  simple_order.py  simple_transaction.py  strategy.py  ticker.py  token.py  transaction.py  user.py
backend/app/app/test/: balance.py  login.py  register.py
backend/app/app/trading/: __init__.py  kis.py  upbit.py
backend/app/celery/: celery_app.py  celery_config.py
backend/app/celery/batchjob/portfolio/: rebalancing.py
backend/app/celery/batchjob/update_ticker/: ticker.py
backend/app/input/: exchange.py  marketcap.py  order_type.py  ticker.py
backend/app/portfolio/: order.py  rebalancing.py
backend/app/price_feed/: get_price.py
backend/db/: docker-compose.yml
backend/redis/: docker-compose.yml
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  pubspec.yaml
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: api_key_management.dart  api_service.dart  home_screen.dart  login.dart  login_state_manager.dart  main.dart  my_page.dart  signup.dart  snackbar_util.dart
frontend/src/: App.vue  main.js
frontend/src/assets/: base.css  home.css  nav.css
frontend/src/components/: Nav.vue
frontend/src/helpers/: fetch-wrapper.js
frontend/src/router/: order.routes.js
frontend/src/stores/: apikey.store.js  auth.store.js  order.store.js  users.store.js
frontend/src/views/: Home.vue
frontend/src/views/account/: Login.vue  Register.vue
frontend/src/views/balance/: Balance.vue  index.js
frontend/src/views/mypage/: ApiKey.vue  Layout.vue  Mypage.vue
price_feed/: .gitignore  get_price.py  pyproject.toml
web/: '  index.html  package-lock.json  package.json
web/src/assets/: home.css
web/src/components/: Modal.vue  Nav.vue  PieChart.vue  index.js
web/src/helpers/: fetch-wrapper.js
web/src/router/: balance.routes.js  index.js  mypage.routes.js  order.routes.js
web/src/stores/: apikey.store.js  auth.store.js  balance.store.js  index.js  order.store.js  portfolio.store.js  ticker.store.js
web/src/views/: Home.vue
(+16 files in other folders)
