[tool.poetry]
name = "price feed"
version = "0.1.0"
description = "Streaming price data from websocket"
authors = ["Jun <chchdelm3@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ccxt = "^4.0.40"
python-dotenv = "^1.0.0"
mojito2 = {git = "https://github.com/junmanbo/mojito.git"}
redis = "^4.6.0"
pandas = "^2.0.3"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^7.3.2"
pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
