[tool.poetry]
name = "price feed"
version = "0.1.0"
description = "Streaming price data from websocket"
authors = ["Jun <chchdelm3@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ccxt = "^4.0.40"
python-dotenv = "^1.0.0"
mojito2 = {git = "https://github.com/junmanbo/mojito.git", branch="main"}
redis = "^4.6.0"
pandas = "^2.0.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
