[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jun <chchdelm3@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.22.0"
fastapi = "^0.98.0"
python-multipart = "^0.0.5"
email-validator = "^1.0.5"
requests = "^2.23.0"
celery = "^5.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
pydantic = "^1.4"
raven = "^6.10.0"
gunicorn = "^20.1.0"
jinja2 = "^2.11.2"
psycopg2-binary = "^2.9.6"
alembic = "^1.11.1"
sqlalchemy = "^2.0.16"
pytest = "^7.3.2"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
ccxt = "^4.0.40"
python-coinmarketcap = "^0.5"
python-dotenv = "^1.0.0"
pandas = "^2.0.3"
mojito2 = {git = "https://github.com/junmanbo/mojito.git"}
emails = "^0.6"
redis = "^4.6.0"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^7.3.2"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
