[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jun <chchdelm3@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
celery = {extras = ["redis"], version = "^5.4.0"}
ccxt = "^4.0.40"
python-coinmarketcap = "^0.5"
python-dotenv = "^1.0.0"
mojito2 = {git = "https://github.com/junmanbo/mojito.git", branch="main"}
redis = "^4.6.0"
fastapi = "^0.100.1"
uvicorn = "^0.23.1"
sqlalchemy = "^2.0.19"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
bcrypt = "3.2.0"
pydantic = "^2.1.1"
alembic = "^1.11.1"
email-validator = "^2.0.0.post2"
requests = "^2.31.0"
emails = "^0.6"
pytest = "^7.4.0"
python-multipart = "^0.0.6"
pydantic-settings = "^2.0.2"
psycopg2-binary = "^2.9.6"
pandas = "^2.0.3"
flower = "^2.0.1"
tenacity = "^8.2.3"
confluent-kafka = "^2.6.1"

[tool.poetry.dev-dependencies]
isort = "^5.12.0"
black = "^23.7.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
